more ad spacing fixes to dairy section

--- a/static/css/partials/_common.scss
+++ b/static/css/partials/_common.scss
@@ -190,9 +190,16 @@ hr.divide10 {
 
 #mainAjaxArticles .row .ad-container {
     margin-top: 40px !important;
+    padding-top: -65px;
     @media screen and (min-width: $sm-break) {
         margin-bottom:15px !important;
-    }    
+    }
+    @media screen and (max-width: $sm-break) {
+        margin-top: 0 !important;
+        #adslot1{
+            margin-top: -25px !important;
+        }
+    }
 
 }
 
